[metadata]
name = plover-xtest-input
version = 0.0.1
author = user202729
description = Plover plugin to capture input from the xtest keyboard.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/user202729/plover-xtest-input
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
packages = plover_xtest_input

[options.entry_points]
plover.machine =
	XTEST keyboard = plover_xtest_input:XTESTKeyboard
	XTEST serial keyboard = plover_xtest_input:XTestSerialKeyboard
